--- a/angular.json
+++ b/angular.json
@@ -122,7 +122,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss","node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css"],
             "scripts": [],
             "customWebpackConfig": {
               "path": "./angular.webpack.js",
